[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/OpenSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Score.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://Scenes/GameOver.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/GameWin.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.980392, 0.972549, 0.937255, 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.560784, 0.478431, 0.4, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.466667, 0.431373, 0.396078, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.560784, 0.478431, 0.4, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Container" type="Panel" parent="."]
margin_right = 480.0
margin_bottom = 1040.0
custom_styles/panel = SubResource( 1 )

[node name="Title" type="Label" parent="Container"]
margin_left = 20.0
margin_top = 80.0
margin_right = 140.0
margin_bottom = 160.0
custom_colors/font_color = Color( 0.466667, 0.431373, 0.396078, 1 )
custom_fonts/font = SubResource( 2 )
text = "2048"
valign = 1

[node name="SubTitle" type="Label" parent="Container"]
margin_left = 20.0
margin_top = 153.0
margin_right = 348.0
margin_bottom = 189.0
custom_colors/font_color = Color( 0.466667, 0.431373, 0.396078, 1 )
custom_fonts/font = SubResource( 3 )
text = "Join the numbers and get to the 2048 tile!"
valign = 1

[node name="ScoreContainer" type="HBoxContainer" parent="Container"]
margin_left = 20.0
margin_top = 193.0
margin_right = 184.0
margin_bottom = 237.0

[node name="CurrentScore" parent="Container/ScoreContainer" instance=ExtResource( 4 )]
margin_bottom = 44.0
title = "SCORE"

[node name="BestScore" parent="Container/ScoreContainer" instance=ExtResource( 4 )]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 44.0
title = "BEST"

[node name="NewGame" type="Button" parent="Container"]
margin_left = 336.0
margin_top = 197.0
margin_right = 460.0
margin_bottom = 237.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 4 )
text = "New Game"

[node name="Board" parent="Container" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -220.0
margin_right = 220.0
margin_bottom = 220.0
grow_horizontal = 0
grow_vertical = 0

[node name="GameOver" parent="." instance=ExtResource( 6 )]
visible = false

[node name="GameWin" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="Container/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="game_over" from="Container/Board" to="." method="_on_Board_game_over"]
[connection signal="game_win" from="Container/Board" to="." method="_on_Board_game_win"]
[connection signal="score" from="Container/Board" to="." method="_on_Board_score"]
[connection signal="start_again" from="GameOver" to="." method="_on_GameOver_start_again"]
[connection signal="restart" from="GameWin" to="." method="_on_GameWin_restart"]
